[gd_scene load_steps=8 format=3 uid="uid://cyrnw4qxenc40"]

[ext_resource type="Texture2D" uid="uid://c0hk0tjwg1f4g" path="res://spritesheets/4 idle.png" id="1_m8h7c"]
[ext_resource type="Script" path="res://scenes/characters/enemy.gd" id="1_pujf8"]

[sub_resource type="Animation" id="Animation_q6lmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(100, 100, 100, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_lw7f7"]
resource_name = "flash"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(4.6256e-05, 1e-05, 1e-05, 0.000110016, 6.31876e-05),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, -1), Vector2(1, 1), Vector2(-1, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_aepq4"]
resource_name = "idle"
length = 1.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3w57"]
_data = {
"RESET": SubResource("Animation_q6lmg"),
"flash": SubResource("Animation_lw7f7"),
"idle": SubResource("Animation_aepq4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c1i87"]
radius = 9.38675

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_pujf8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
texture = ExtResource("1_m8h7c")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_e3w57")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_c1i87")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.998

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.872

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
